src/components/CSS/title.css
.typewriter {
    overflow: hidden; /* Ensures the content is not revealed until the animation */
    border-right: .15em solid orange; /* The typwriter cursor */
    white-space: nowrap; /* Keeps the content on a single line */
    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
    animation: 
      typing 3.5s steps(30, end),
      blink-caret .75s step-end infinite;
}
  
/* The typing effect */
@keyframes typing {
    from { width: 0 }
    to { width: 100% }
}
  
/* The typewriter cursor effect */
@keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: rgb(0, 0, 0); }
}

#title-name{
    font-family: 'Gagalin', sans-serif;
    font-size: 24px
}

#title{
    height: 68.8vh;
    padding-top: 177px;
}

.top-camera {
    position: absolute;
    right: 300px;
    top: 140px;
    overflow-clip-margin: content-box;
    overflow: clip;
}
.top-plane{
    position: absolute;
    right: 700px;
    top: 140px;
    overflow-clip-margin: content-box;
    overflow: clip;
}

